--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
+    "execa": "^9.6.0",
     "nitro": "3.0.1-alpha.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
